--- a/app/src/main/assets/bcm.html
+++ b/app/src/main/assets/bcm.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Application Information</title>
+<title>BLE Cardiac Monitor</title>
 </head>
 <body>
 <h3 align="center">BLE Cardiac Monitor</h3>
