--- a/app/src/main/assets/bcm.html
+++ b/app/src/main/assets/bcm.html
@@ -76,7 +76,7 @@
 <h3 align="left"><a name="settings" id="settings"></a>Settings</h3>
 <p align="left">The Settings screen allows you to set if HR and/or RR axes are shown or not. You can also set the time interval for real-time plots. These settings are saved between sessions. </p>
 <h3 align="left"><a name="acknowledgement" id="acknowledgement"></a>Acknowledgement</h3>
-<p>The plotting uses AFreeChart.</p>
+<p>The plotting uses AndroidPlot.</p>
 <p><a href="https://github.com/johnjohndoe/AFreeChart">https://github.com/johnjohndoe/AFreeChart</a> </p>
 <p>&nbsp;</p>
 </body>
