Redid permissions logic. Should work for Android 12.
versionCode=16 versionName "5.4.0"
Utils is newer version with more features.

--- a/app/src/main/assets/bcm.html
+++ b/app/src/main/assets/bcm.html
@@ -84,8 +84,6 @@
 <h3 align="left"><a name="settings" id="settings"></a>Settings</h3>
 <p align="left">The Settings screen allows you to set if HR and/or RR axes are shown or not. You can also set the time interval for real-time plots. These settings are saved between sessions. </p>
 <h3 align="left"><a name="acknowledgement" id="acknowledgement"></a>Acknowledgement</h3>
-<p>The plotting uses AndroidPlot.</p>
-<p><a href="https://github.com/johnjohndoe/AFreeChart">https://github.com/johnjohndoe/AFreeChart</a> </p>
-<p>&nbsp;</p>
+<p>The plotting uses AndroidPlot (<a href="https://github.com/halfhp/androidplot">https://github.com/halfhp/androidplot).</a></p>
 </body>
 </html>
